--- a/assets/css/_partial/_single/_footer.scss
+++ b/assets/css/_partial/_single/_footer.scss
@@ -77,6 +77,14 @@
     font-size: 0.9rem;
   }
 
+  .post-tags {
+    max-width: 65%;
+
+    * {
+      display: inline;
+    }
+  }
+
   .post-nav {
     &::before,
     &::after {
